crates/carta/tests/snapshots/docx__docx__math-big-operators.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<m:oMathPara>
<m:oMathParaPr>
<m:jc m:val="center" />
</m:oMathParaPr>
<m:oMath>
<m:limLow>
<m:e>
<m:limUpp>
<m:e>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>⋃</m:t>
</m:r>
</m:e>
<m:lim>
<m:r>
<m:t>n</m:t>
</m:r>
</m:lim>
</m:limUpp>
</m:e>
<m:lim>
<m:r>
<m:t>i</m:t>
</m:r>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>=</m:t>
</m:r>
<m:r>
<m:t>1</m:t>
</m:r>
</m:lim>
</m:limLow>
<m:sSub>
<m:e>
<m:r>
<m:t>A</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>i</m:t>
</m:r>
</m:sub>
</m:sSub>
</m:oMath>
</m:oMathPara>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<m:oMathPara>
<m:oMathParaPr>
<m:jc m:val="center" />
</m:oMathParaPr>
<m:oMath>
<m:limLow>
<m:e>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>⋀</m:t>
</m:r>
</m:e>
<m:lim>
<m:r>
<m:t>k</m:t>
</m:r>
</m:lim>
</m:limLow>
<m:sSub>
<m:e>
<m:r>
<m:t>B</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>k</m:t>
</m:r>
</m:sub>
</m:sSub>
</m:oMath>
</m:oMathPara>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<m:oMathPara>
<m:oMathParaPr>
<m:jc m:val="center" />
</m:oMathParaPr>
<m:oMath>
<m:limUpp>
<m:e>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>⨆</m:t>
</m:r>
</m:e>
<m:lim>
<m:r>
<m:t>m</m:t>
</m:r>
</m:lim>
</m:limUpp>
<m:r>
<m:t>D</m:t>
</m:r>
</m:oMath>
</m:oMathPara>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<m:oMathPara>
<m:oMathParaPr>
<m:jc m:val="center" />
</m:oMathParaPr>
<m:oMath>
<m:sSub>
<m:e>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>⨁</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>i</m:t>
</m:r>
</m:sub>
</m:sSub>
<m:sSub>
<m:e>
<m:r>
<m:t>C</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>i</m:t>
</m:r>
</m:sub>
</m:sSub>
</m:oMath>
</m:oMathPara>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">The intersection</w:t>
</w:r>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<m:oMath>
<m:sSub>
<m:e>
<m:r>
<m:rPr>
<m:sty m:val="p" />
</m:rPr>
<m:t>⋂</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>j</m:t>
</m:r>
</m:sub>
</m:sSub>
<m:sSub>
<m:e>
<m:r>
<m:t>E</m:t>
</m:r>
</m:e>
<m:sub>
<m:r>
<m:t>j</m:t>
</m:r>
</m:sub>
</m:sSub>
</m:oMath>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:r>
<w:t xml:space="preserve">is small.</w:t>
</w:r>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
