crates/carta/tests/snapshots/docx__docx__math-matrix-rule.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">The block matrix</w:t>
</w:r>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<m:oMath>
<m:d>
<m:dPr>
<m:begChr m:val="(" />
<m:sepChr m:val="" />
<m:endChr m:val=")" />
<m:grow />
</m:dPr>
<m:e>
<m:m>
<m:mPr>
<m:baseJc m:val="center" />
<m:plcHide m:val="on" />
<m:mcs>
<m:mc>
<m:mcPr>
<m:mcJc m:val="center" />
<m:count m:val="1" />
</m:mcPr>
</m:mc>
<m:mc>
<m:mcPr>
<m:mcJc m:val="center" />
<m:count m:val="1" />
</m:mcPr>
</m:mc>
</m:mcs>
</m:mPr>
<m:mr>
<m:e>
<m:r>
<m:t>a</m:t>
</m:r>
</m:e>
<m:e>
<m:r>
<m:t>b</m:t>
</m:r>
</m:e>
</m:mr>
<m:mr>
<m:e>
<m:r>
<m:t>c</m:t>
</m:r>
</m:e>
<m:e>
<m:r>
<m:t>d</m:t>
</m:r>
</m:e>
</m:mr>
</m:m>
</m:e>
</m:d>
</m:oMath>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:r>
<w:t xml:space="preserve">splits.</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="BodyText" />
</w:pPr>
<m:oMathPara>
<m:oMathParaPr>
<m:jc m:val="center" />
</m:oMathParaPr>
<m:oMath>
<m:m>
<m:mPr>
<m:baseJc m:val="center" />
<m:plcHide m:val="on" />
<m:mcs>
<m:mc>
<m:mcPr>
<m:mcJc m:val="center" />
<m:count m:val="1" />
</m:mcPr>
</m:mc>
<m:mc>
<m:mcPr>
<m:mcJc m:val="center" />
<m:count m:val="1" />
</m:mcPr>
</m:mc>
</m:mcs>
</m:mPr>
<m:mr>
<m:e>
<m:r>
<m:t>1</m:t>
</m:r>
</m:e>
<m:e>
<m:r>
<m:t>2</m:t>
</m:r>
</m:e>
</m:mr>
<m:mr>
<m:e>
<m:r>
<m:t>3</m:t>
</m:r>
</m:e>
<m:e>
<m:r>
<m:t>4</m:t>
</m:r>
</m:e>
</m:mr>
</m:m>
</m:oMath>
</m:oMathPara>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
